fixed bug z-index

--- a/space/css/animations.css
+++ b/space/css/animations.css
@@ -1,5 +1,6 @@
 /* animations.css */
 
+
 /* Glow pour h1 est déjà dans base.css, tu peux ajouter d'autres animations ici */
 
 @keyframes shootingStar {
@@ -14,15 +15,7 @@
   }
   /* etoiles */
   
-  #shooting-stars {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    z-index: -1;
-  }
+
   
   .shooting-star {
     position: absolute;
@@ -94,3 +87,4 @@
     }
   }
   
+
